@@ -1,7 +1,6 @@
 package com.java110.utils.util;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import org.apache.commons.net.util.Base64;
 
 import java.io.*;
 
@@ -25,7 +24,7 @@ public class Base64Convert {
             byte[] bytes = new byte[in.available()];
             // 将文件中的内容读入到数组中
             in.read(bytes);
-            strBase64 = new BASE64Encoder().encode(bytes);      //将字节流数组转换为字符串
+            strBase64 = Base64.encodeBase64String(bytes);
         } finally {
             if (in != null) {
                 in.close();
@@ -36,8 +35,6 @@ public class Base64Convert {
     }
 
 
-   
-
     /**
      * 将base64 转为字节
      *
@@ -47,7 +44,7 @@ public class Base64Convert {
      */
     public static byte[] base64ToByte(String strBase64) throws IOException {
         // 解码，然后将字节转换为文件
-        byte[] bytes = new BASE64Decoder().decodeBuffer(strBase64);   //将字符串转换为byte数组
+        byte[] bytes = Base64.decodeBase64(strBase64);
         return bytes;
     }
 }
